<resources>
    <string name="app_name">NewRoyalMobile</string>
    <string name="started_title">Hello You!</string>
    <string name="started_sub_title">
        Nice to meet you, come join our community!
        <br>Login if you already have an account.</br>
        <br>Register to get started with the app.</br>
    </string>
    <string name="illustration_img">Illustration Image</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_login">LOGIN</string>
    <string name="login_title">LOGIN TO APP</string>
    <string name="login_sub_title">
        <font color="#00C9B8"><b>Login </b></font>if you already have an account</string>
    <string name="login_email">Your Email or Username</string>
    <string name="login_password">YOUR PASSWORD</string>
    <string name="register_confirm_password">Confirm password</string>
    <string name="login_forgot_pw">Forgot Password</string>
    <string name="login_havent_account">
        I don\'t have an account<font color="#00C9B8"><b>Register</b></font>
    </string>
    <string name="register_title">Create an account</string>
    <string name="register_sub_title">
        <font color="#00C9B8">Register </font>if you already have an account</string>
    <string name="register_fullname">Your Name</string>
    <string name="register_email">Email</string>
    <string name="register_username">Your username</string>
    <string name="register_have_account">I already have an account <font color="#00C988">Login</font></string>
    <string name="home_title">Hello World!</string>
    <string name="home_sub_title">Welcome to home</string>
    <string name="btn_logout">LOGOUT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">close Drawer</string>

</resources>